--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -1,10 +1,55 @@
 {% extends "base.html" %}
-
+{% from 'bootstrap5/form.html' import render_form %}
 {% block title %}Welcome{% endblock%}
 
 {% block body_content %}
 <div class="container">
         <h1>Welcome to my Blog</h1>
         <p>Lorem ipsum dolor sit amet,labore minima perspiciat</p>
+</div>
+
+<!-- Main Content-->
+<div class="container px-4 px-lg-5">
+  <div class="row gx-4 gx-lg-5 justify-content-center">
+    <div class="col-md-10 col-lg-8 col-xl-7">
+      <!-- Post preview-->
+      {% for post in all_posts %}
+      <div class="post-preview">
+        <a href="{{ url_for('views.show_post', post_id=post.id) }}">
+          <h2 class="post-title">{{ post.title }}</h2>
+          <h3 class="post-subtitle">{{ post.subtitle }}</h3>
+        </a>
+        <p class="post-meta">
+          Posted by
+<!--          Previously it was {{ post.author }}, now post.user is UserDB Object-->
+          <a href="#">{{post.author.name}}</a>
+          on {{post.date}}
+          <!-- Only show delete button if user is logged in) -->
+          {% if current_user.is_authenticated %}
+          <a href="{{url_for('views.delete_post', post_id=post.id) }}">✘</a>
+          {% endif %}
+        </p>
+      </div>
+      <!-- Divider-->
+      <hr class="my-4" />
+      {% endfor %}
+
+<!--       New Post-->
+<!--       Only show Create Post button if user is logged in-->
+      {% if current_user.is_authenticated %}
+      <div class="d-flex justify-content-end mb-4">
+        <a
+          class="btn btn-primary float-right"
+          href="{{url_for('views.add_new_post')}}"
+          >Create New Post</a
+        >
+      </div>
+      {% endif %}
+      <!-- Pager-->
+      <div class="d-flex justify-content-end mb-4">
+        <a class="btn btn-secondary text-uppercase" href="#!">Older Posts →</a>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
