--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -35,6 +35,7 @@
     </header>
 </div>
 <!--Flash messages-->
+<div class="container">
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
             {% for category, message in messages %} {% if category == 'error' %}
@@ -52,6 +53,7 @@
             </button>
         </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
+</div>
 {% block body_content %}
 
 <div class="container">
