--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -4,7 +4,7 @@
 {{ bootstrap.load_css() }}
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="url_for('static', filename='styles.css')">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <title>{% block title %}Title{% endblock %}</title>
 </head>
 <body>
