--- a/website/templates/make-post.html
+++ b/website/templates/make-post.html
@@ -7,7 +7,7 @@
 
 <header
   class="masthead"
-  style="background-image: url('../static/assets/img/edit-bg.jpg')"
+  style="background-image: url('../static/images/edit-bg.jpg')"
 >
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
