--- a/website/templates/post.html
+++ b/website/templates/post.html
@@ -6,7 +6,8 @@
 {% block body_content %}
 
 <!-- Page Header-->
-<header class="masthead" style="background-image: url('{{post.img_url}}')">
+<div class="container">
+<header class="masthead" style="background-image: url('{{post.img_url}}');  background-size: cover; background-position: center;">
   <div class="container position-relative px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
@@ -27,7 +28,7 @@
     </div>
   </div>
 </header>
-
+</div>
 <!-- Post Content -->
 <article>
   <div class="container px-4 px-lg-5">
