--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -9,18 +9,25 @@
 </div>
 
 <div class="container">
-        <h1 align="center">Notes</h1>
+    <div class="row">
+        <div class="col-4">
+            <h1 align="çenter">My Profile</h1>
+        </div>
+        <div class="col-sm-4">
+            <h1 align="center">Notes</h1>
                 <ul class="list-group list-group-flush">
                 {% for note in current_user.notes %}
-                 <li class="list-group-item">
-                {{ note.data }}
+                 <li class="list-group-item d-flex justify-content-between align-items-center">
+                   <span>{{ note.data }}</span>
 <!-- Add a delete option -->
-            <form method="POST" action="{{ url_for('views.delete_note', note_id=note.id) }}">
+                <form method="POST" action="{{ url_for('views.delete_note', note_id=note.id) }}">
                     <input type="hidden" name="_method" value="DELETE">
                     <button type="submit" class="btn btn-primary">Delete</button>
-            </form>
-                {% endfor %}
+                </form></li>
+                        {% endfor %}
                 </ul>
-        {{ render_form(form) }}
+            {{ render_form(form) }}
+        </div>
+    </div>
 </div>
 {% endblock %}
