--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -21,7 +21,7 @@
         <li><a href="{{ url_for('views.home') }}" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a href="#" class="nav-link px-2">About</a></li>
           {% if current_user.is_authenticated %}
-        <li><a href="{{ url_for('views.myprofile') }}" class="nav-link px-2">My Profile</a></li>
+        <li><a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="nav-link px-2">My Profile</a></li>
         <li><a href="#" class="nav-link px-2">Features</a></li>
         <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Blog</a></li>
 
