--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -12,6 +12,11 @@
     <div class="row">
         <div class="col-4">
             <h1 align="çenter">My Profile</h1>
+               <p>Name: {{ current_user.name }}</p>
+                <p>Email: {{ current_user.email }}</p>
+            {% if current_user.is_authenticated %}
+                <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
+            {% endif %}
         </div>
         <div class="col-sm-4">
             <h1 align="center">Notes</h1>
