--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -16,6 +16,7 @@
                 <p>Email: {{ current_user.email }}</p>
             {% if current_user.is_authenticated %}
                 <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
+                <p> <a href="{{ url_for('auth.change_password') }}" class="btn btn-primary"> Change Your Password</a> </p>
             {% endif %}
         </div>
         <div class="col-sm-4">
