--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -25,7 +25,7 @@
           <a href="#">{{post.author.name}}</a>
           on {{post.date}}
           <!-- Only show delete button if user is logged in) -->
-          {% if current_user.is_authenticated %}
+          {% if current_user.is_authenticated and post.author_id == current_user.id %}
           <a href="{{url_for('views.delete_post', post_id=post.id) }}">✘</a>
           {% endif %}
         </p>
