--- a/website/templates/post.html
+++ b/website/templates/post.html
@@ -36,7 +36,7 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
         <!--Only show Edit Post button if user is logged in -->
-        {% if current_user.is_authenticated %}
+        {% if current_user.is_authenticated and post.author_id == current_user.id %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
