--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -17,6 +17,9 @@
             <h1 align="çenter">My Profile</h1>
                <p>Name: {{ current_user.name }}</p>
                 <p>Email: {{ current_user.email }}</p>
+            {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+            {% if user.last_seen %}<p>Last seen on: {{ user.last_seen }}</p> {% endif %}
+
             {% if current_user.is_authenticated %}
                 <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
                 <p> <a href="{{ url_for('auth.change_password') }}" class="btn btn-primary"> Change Your Password</a> </p>
