--- a/website/templates/edit_profile.html
+++ b/website/templates/edit_profile.html
@@ -6,10 +6,12 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-4">
-      <h2>Edit your profile</h2>
+         <ul class="list-group list-group-flush">
+        <h2>Edit your profile</h2>
     <p>Using bootstrap-WTForms. Learning how to style.</p>
-        {{ render_form(form, button_style='warning') }}
-
+        <li class="list-group-item d-flex justify-content-between align-items-end">
+        <span>{{ render_form(form, button_style='warning') }}</span>
+        <a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="btn btn-primary">Back</a>
         </div>
     </div>
 </div>
