--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,33 +1,45 @@
 {% extends "base.html" %}
+{% from 'bootstrap5/form.html' import render_form %}
 {% block title %}Register{% endblock %}
 
 {% block body_content %}
 <div class="container">
-  <main class="form-signin w-100 m-auto">
-      <h2>Please register</h2>
-        <p>Using WTForms. Easier to style.</p>
-    <div class="form-floating">
-      <form method="POST" action="{{ url_for('auth.register') }}" >
-            {{ form.csrf_token }}
-            {{ form.name.label }} <br> {{ form.name(size=30) }} <br>
-            {{ form.email.label }}  <br> {{ form.email(size=30) }} <br>
-                    {% for err in form.email.errors %}
-                    <span style="color:red">{{ err }}</span>
-                    {% endfor %}
-            {{ form.password1.label }}  <br> {{ form.password1(size=30) }}<br>
-                    {% for err in form.password1.errors %}
-                    <span style="color:red">{{ err }}</span>
-                    {% endfor %}
-            {{ form.password2.label }}  <br> {{ form.password2(size=30) }}<br>
-                    {% for err in form.password2.errors %}
-                    <span style="color:red">{{ err }}</span>
-                    {% endfor %}
-            <br>
-            <button class="btn btn-primary" type="submit" value="Register">Register</button>
-          </br>
-        </form>
+    <div class="row justify-content-md-center">
+        <div class="col-md-6">
+            <main class="form-signin">
+                <h2 class="h3 mb-3 fw-normal text-center">Please register</h2>
+                <p class="text-center">Using WTForms. Learning how to style.</p>
+                <form method="POST" action="{{ url_for('auth.register') }}">
+                    <div class="mb-3">
+                        {{ form.csrf_token }}
+                        <label class="form-label">Name</label>
+                        {{ form.name(class="form-control") }}
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">Email address</label>
+                        {{ form.email(class="form-control") }}
+                        {% for err in form.email.errors %}
+                            <span class="text-danger">{{ err }}</span>
+                        {% endfor %}
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">Password</label>
+                        {{ form.password1(class="form-control") }}
+                        {% for err in form.password1.errors %}
+                            <span class="text-danger">{{ err }}</span>
+                        {% endfor %}
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">Confirm Password</label>
+                        {{ form.password2(class="form-control") }}
+                        {% for err in form.password2.errors %}
+                            <span class="text-danger">{{ err }}</span>
+                        {% endfor %}
+                    </div>
+                    <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+                </form>
+            </main>
+        </div>
     </div>
-  </main>
 </div>
-
 {% endblock %}
