--- a/website/templates/change_password.html
+++ b/website/templates/change_password.html
@@ -4,11 +4,16 @@
 
 {% block body_content %}
 <div class="container">
-    <div class="row">
-        <div class="col-sm-4">
-      <h2>Change your profile</h2>
-    <p>Using bootstrap-WTForms. Learning how to style.</p>
-        {{ render_form(form, button_style='warning') }}
+    <div class="row justify-content-md-center">
+        <div class="col-md-6">
+             <main class="form-signin">
+                <h2 class="h3 mb-3 fw-normal text-center">Change your password</h2>
+                <p>Using bootstrap-WTForms. Learning how to style.</p>
+                    {{ render_form(form, button_style='warning w-100 btn btn-lg') }}
+             </main> <br>
+        <div class="col-md-6">
+            <a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="btn btn-primary">Back</a>
+        </div>
 
         </div>
     </div>
