--- a/website/templates/edit_profile.html
+++ b/website/templates/edit_profile.html
@@ -4,19 +4,16 @@
 
 {% block body_content %}
 <div class="container">
-    <div class="row">
-        <div class="col-sm-8">
-         <ul class="list-group">
-            <h2>Edit your profile</h2>
+    <div class="row justify-content-md-center">
+        <div class="col-md-6">
+             <main class="form-signin">
+                <h2 class="h3 mb-3 fw-normal text-center">Edit your profile</h2>
                 <p>Using bootstrap-WTForms. Learning how to style.</p>
-                <li class="list-group-item d-flex justify-content-between align-items-end">
-                    <div class="col-md-9">
-                {{ render_form(form, button_style='warning') }}
-                    </div>
-                    <div class="col-md-3">
-                   <span><a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="btn btn-primary">Back</a></span>
-                </div>
-            </li></ul>
+                    {{ render_form(form, button_style='warning w-100 btn btn-lg') }}
+             </main> <br>
+        <div class="col-md-6">
+            <a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="btn btn-primary">Back</a>
+        </div>
         </div>
     </div>
 </div>
