Style profile page and add some icons

--- a/website/static/styles.css
+++ b/website/static/styles.css
@@ -1,3 +1,11 @@
+* {
+    box-sizing:border-box;
+}
+
+.marketing .col-lg-4 {
+    margin-bottom: 0.5rem;
+    text-align: center;
+}
 
 
 header.masthead {
