--- a/website/templates/profile.html
+++ b/website/templates/profile.html
@@ -3,25 +3,48 @@
 {% block title %}My Profile{% endblock%}
 
 {% block body_content %}
+<div class="container marketing">
+     <h1 align="center" class="fw-normal">Hello {{ current_user.name }}</h1>
+     <br>
 <div class="container">
-    <table>
-        <h1 align="center">Hello {{ current_user.name }}</h1>
-        <p>Lorem ipsum dolor sit amet,labore minima perspiciat</p>
-    </table>
+    <div class="row">
+        <div class="col-lg-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-file-person" viewBox="0 0 16 16">
+                <path d="M12 1a1 1 0 0 1 1 1v10.755S12 11 8 11s-5 1.755-5 1.755V2a1 1 0 0 1 1-1zM4 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                <path d="M8 10a3 3 0 1 0 0-6 3 3 0 0 0 0 6"/>
+            </svg>
+            <a href="#mp" class="btn btn-secondary fw-normal">My Profile</a>
+        </div>
+        <div class="col-lg-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-chat-square-text" viewBox="0 0 16 16">
+                <path d="M14 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1h-2.5a2 2 0 0 0-1.6.8L8 14.333 6.1 11.8a2 2 0 0 0-1.6-.8H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h2.5a1 1 0 0 1 .8.4l1.9 2.533a1 1 0 0 0 1.6 0l1.9-2.533a1 1 0 0 1 .8-.4H14a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"/>
+                <path d="M3 3.5a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9a.5.5 0 0 1-.5-.5M3 6a.5.5 0 0 1 .5-.5h9a.5.5 0 0 1 0 1h-9A.5.5 0 0 1 3 6m0 2.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5"/>
+            </svg>
+            <a href="#pc" class="btn btn-secondary fw-normal">My Posts&Comments</a>
+        </div>
+        <div class="col-lg-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-clipboard-check" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0"/>
+                <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1z"/>
+                <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0z"/>
+            </svg>
+            <a href="#notes" class="btn btn-secondary fw-normal">My Notes</a>
+        </div>
+    </div>
 </div>
 
 <div class="container">
     <hr class="featurette-divider">
     <div class="row featurette">
         <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">My Profile</h2>
+            <h2 class="featurette-heading fw-normal lh-1" id="mp">My Profile</h2>
             <p class="lead">Name: {{ current_user.name }}</p>
             <p class="lead">Email: {{ current_user.email }}</p>
             {% if user.about_me %}<p class="lead">{{ user.about_me }}</p>{% endif %}
             {% if user.last_seen %}<p class="lead">Last seen on: {{ user.last_seen }}</p> {% endif %}
             {% if current_user.is_authenticated %}
                 <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
-                <p> <a href="{{ url_for('auth.change_password') }}" class="btn btn-primary"> Change Your Password</a> </p>
+                <p> <a href="{{ url_for('auth.change_password') }}" class="btn btn-outline-primary"> Change Your Password</a> </p>
             {% endif %}
         </div>
         <div class="col-md-5">
@@ -33,7 +56,7 @@
 
     <div class="row featurette">
         <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading fw-normal lh-1">My Posts & Comments</h2>
+            <h2 class="featurette-heading fw-normal lh-1" id="pc">My Posts & Comments</h2>
             {% if current_user.is_authenticated %}
                 {% for post in posts %}
                        {% include '_post.html' %}
@@ -52,7 +75,7 @@
 
     <div class="row">
         <div class="col-md-7">
-            <h2 class="featurette-heading fw-normal lh-1">My Notes</h2>
+            <h2 class="featurette-heading fw-normal lh-1" id="notes">My Notes</h2>
             {% include '_notes.html' %}
                 {{ render_form(form) }}
         </div>
@@ -63,6 +86,6 @@
             <a href="#">Back to top</a>
         </p>
     </footer>
-
+  </div>
 </div>
 {% endblock %}
