--- a/website/templates/_post.html
+++ b/website/templates/_post.html
@@ -1,12 +1,12 @@
 <table class="table table-hover">
   <tr>
     <td width="50px">
-      <a href="{{ url_for('views.myprofile', name=current_user.name) }}">
+      <a href="{{ url_for('views.myprofile', name=user.name) }}">
           <img src="{{ post.author.avatar(50) }}">
       </a>
     </td>
     <td>
-      <a href="{{ url_for('views.myprofile', name=current_user.name) }}">
+      <a href="{{ url_for('views.myprofile', name=user.name) }}">
         {{ post.author.name }}
       </a>
       posts:
