--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -4,7 +4,7 @@
 
 {% block body_content %}
         <div class="container">
-        <h1>Welcome to my Flask Portfo Website</h1>
-        <p>Lorem ipsum dolor sit amet,labore minima perspiciat</p>
+        <h1 align="center" class="fw-normal">Welcome to my Flask Portfo Website</h1>
+        <p align="center" class="fw-normal">Lorem ipsum dolor sit amet,labore minima perspiciat</p>
         </div>
 {% endblock %}
