--- a/website/templates/post.html
+++ b/website/templates/post.html
@@ -19,7 +19,7 @@
         <div class="card-footer text-muted">
           <span class="meta"
             >Posted by
-<!--            Changed from pos.author-->
+<!--            Changed from post.author-->
             <a href="{{ url_for('views.myprofile', name=post.author.name) }}">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
@@ -45,31 +45,37 @@
           >
         </div>
         {% endif %}
+        <br>
         <!-- Comments Area -->
-        <!-- Add a CKEditor for commenting below -->
-        {{ ckeditor.load() }} {{ ckeditor.config(name='comment_text') }}
-        {{ render_form(form) }}
-        <div class="comment">
-          <!-- Show all the comments on a post -->
-          <ul class="commentList">
-            {% for comment in post.comments: %}
-            <li>
-<!--              <div class="commenterImage">-->
+
+{{ ckeditor.load() }}
+{{ ckeditor.config(name='comment_text') }}
+{{ render_form(form) }}
+
+<div class="comment">
+    <ul class="commentList">
+        {% for comment in post.comments %}
+        <li class="commentItem">
+            <div class="commentHeader">
                 <img src="{{ comment.comment_author.avatar(36) }}" />
-<!--              </div>-->
-              <div class="commentText">
-                {{ comment.text|safe }}
-                <span class="date sub-text">{{ comment.comment_author.name }}</span>
-                <span>
-                  {% if comment.comment_author.email == current_user.email %}
-                  <a href="{{ url_for('views.delete_comment', comment_id=comment.id, post_id=post.id) }}">✘</a>
-                  {% endif %}
-                </span>
-              </div>
-            </li>
-            {% endfor %}
-          </ul>
-        </div>
+            </div>
+            <div class="commentContent">
+                <div class="authorInfo">
+                    <a href="{{ url_for('views.myprofile', name=comment.comment_author.name) }}">
+                        <span class="authorName">{{ comment.comment_author.name }}</span>
+                    </a>
+                    {% if comment.comment_author.email == current_user.email %}
+                    <a href="{{ url_for('views.delete_comment', comment_id=comment.id, post_id=post.id) }}" class="deleteCommentBtn">✘</a>
+                    {% endif %}
+                </div>
+                <div class="commentText">{{ comment.text|safe }}</div>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
+</div>
+
+
       </div>
     </div>
   </div>
