Try to fix the explore page, blog page and pagination

--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -19,11 +19,11 @@
       </div>
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{{ url_for('views.home') }}" class="nav-link px-2 link-secondary">Home</a></li>
-        <li><a href="#" class="nav-link px-2">About</a></li>
+        <li><a href="{{ url_for('views.explore') }}" class="nav-link px-2">Explore</a></li>
           {% if current_user.is_authenticated %}
         <li><a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="nav-link px-2">My Profile</a></li>
         <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Blog</a></li>
+        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">My Blog Space</a></li>
 
       </ul>
      <div class="col-md-3 text-end">
