--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -22,8 +22,8 @@
         <li><a href="{{ url_for('views.explore') }}" class="nav-link px-2">Explore</a></li>
           {% if current_user.is_authenticated %}
         <li><a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="nav-link px-2">My Profile</a></li>
-        <li><a href="#" class="nav-link px-2">Features</a></li>
-        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">My Blog Space</a></li>
+        <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Feed</a></li>
+<!--        <li><a href="#" class="nav-link px-2">Features</a></li>-->
 
       </ul>
      <div class="col-md-3 text-end">
