--- a/website/templates/blog.html
+++ b/website/templates/blog.html
@@ -5,7 +5,7 @@
 {% block body_content %}
 <div class="container">
     {% if is_follow: %}
-        <h1 align="center" class="fw-normal">Welcome to my Blog Space! </h1>
+        <h1 align="center" class="fw-normal">Welcome to your Blog Feed! </h1>
         <p align="center" class="fw-normal">Here you can follow your friends' posts and share your thoughts.</p>
     {% else: %}
         <h1 align="center" class="fw-normal">Explore the Blog</h1>
