--- a/website/templates/email/reset_password.html
+++ b/website/templates/email/reset_password.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <p>Dear {{ user.username }},</p>
+        <p>Dear {{ user.name }},</p>
         <p>
             To reset your password
             <a href="{{ url_for('auth.reset_password', token=token, _external=True) }}">
