--- a/website/templates/views/profile.html
+++ b/website/templates/views/profile.html
@@ -48,7 +48,7 @@
             <p class="lead">Name: {{ user.name }}</p>
             <p class="lead">Email: {{ user.email }}</p>
             {% if user.about_me %}<p class="lead">{{ user.about_me }}</p>{% endif %}
-            {% if user.last_seen %}<p class="lead">Last seen on: {{ user.last_seen }}</p> {% endif %}
+            {% if user.last_seen %}<p class="lead">Last seen on: {{ moment(user.last_seen).format('LLL') }}</p> {% endif %}
             <p>{{ user.followers_count() }} followers, {{ user.following_count() }} following.</p>
             {% if user == current_user %}
                 <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
