--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -20,10 +20,20 @@
       <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
         <li><a href="{{ url_for('views.home') }}" class="nav-link px-2 link-secondary">Home</a></li>
         <li><a href="{{ url_for('views.explore') }}" class="nav-link px-2">Explore</a></li>
+
           {% if current_user.is_authenticated %}
         <li><a href="{{ url_for('views.myprofile', name=current_user.name) }}" class="nav-link px-2">My Profile</a></li>
         <li><a href="{{ url_for('views.blog_all_posts') }}" class="nav-link px-2">Feed</a></li>
-<!--        <li><a href="#" class="nav-link px-2">Features</a></li>-->
+
+                {% if g.search_form %}
+                <form class="navbar-form navbar-left" method="get"
+                        action="{{ url_for('views.search') }}">
+                    <div class="form-group">
+                        {{ g.search_form.q(size=20, class='form-control',
+                            placeholder=g.search_form.q.label.text) }}
+                    </div>
+                </form>
+                {% endif %}
 
       </ul>
      <div class="col-md-3 text-end">
