Add clickable show post on the sresults and redirect to the result

--- a/website/templates/_post.html
+++ b/website/templates/_post.html
@@ -11,7 +11,9 @@
       </a>
       posts:
       <br>
+      <a href="{{ url_for('views.show_post', post_id=post.id) }}">
       {{ post.title | safe }}
+      </a>
     </td>
   </tr>
 </table>
