--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -33,8 +33,16 @@
                             placeholder=g.search_form.q.label.text) }}
                     </div>
                 </form>
-                {% endif %}
+        <li><a href="{{ url_for('views.messages') }}" class="nav-link px-2">Messages
+         {% set unread_message_count = current_user.unread_message_count() %}
+                <span id="message_count" class="badge text-bg-danger"
+                      style="visibility: {% if unread_message_count %}visible
+                                         {% else %}hidden{% endif %};">
+                    {{ unread_message_count }}
+                </span>
+        </a></li>
 
+          {% endif %}
       </ul>
      <div class="col-md-3 text-end">
          <a href="{{ url_for('auth.logout') }}" class="btn btn-outline-primary me-2">Logout</a>
@@ -105,6 +113,12 @@
         }
       }
       document.addEventListener('DOMContentLoaded', initialize_popovers);
+
+       function set_message_count(n) {
+        const count = document.getElementById('message_count');
+        count.innerText = n;
+        count.style.visibility = n ? 'visible' : 'hidden';
+      }
 </script>
 </body>
 </html>
