--- a/website/templates/views/profile.html
+++ b/website/templates/views/profile.html
@@ -69,6 +69,12 @@
                 </form>
             </p>
             {% endif %}
+
+            <!--Messages-->
+            {% if user != current_user %}
+            <p><a href="{{ url_for('views.send_message', recipient=user.name) }}">{{ ('Send private message')}}</a></p>
+            {% endif %}
+
         </div>
 
 
