--- a/website/templates/messages.html
+++ b/website/templates/messages.html
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row justify-content-md-center">
     <div class="col-md-6">
-      <h1>{{ ('Messages') }}</h1>
+      <h1>Messages</h1>
       <table class="table table-hover">
         <tbody>
           {% for message in messages %}
@@ -30,12 +30,12 @@
         <ul class="pagination">
           <li class="page-item{% if not prev_url %} disabled{% endif %}">
             <a class="page-link" href="{{ prev_url }}">
-              <span aria-hidden="true">&larr;</span> {{ ('Newer messages') }}
+              <span aria-hidden="true">&larr;</span>Newer messages
             </a>
           </li>
           <li class="page-item{% if not next_url %} disabled{% endif %}">
             <a class="page-link" href="{{ next_url }}">
-              {{ ('Older messages') }} <span aria-hidden="true">&rarr;</span>
+              Older messages <span aria-hidden="true">&rarr;</span>
             </a>
           </li>
         </ul>
