--- a/website/templates/send_message.html
+++ b/website/templates/send_message.html
@@ -8,7 +8,7 @@
         <div class="col-md-6">
             <main class="form-signin">
                 <h2 class="h3 mb-3 fw-normal text-center">
-                    {{ "Send Message to %(recipient)s"|format(recipient=recipient) }}
+                    Send Message to {{ recipient }}
                 </h2>
                     {{  form.hidden_tag() }}
                     {{ render_form(form, button_style='btn btn-outline-primary w-100 btn btn-lg') }}
