--- a/website/templates/user_popup.html
+++ b/website/templates/user_popup.html
@@ -6,13 +6,13 @@
   {% endif %}
   <div class="clearfix"></div>
   {% if user.last_seen %}
-    <p>{{ 'Last seen on' }}: {{ moment(user.last_seen).format('lll') }}</p>
+    <p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p>
   {% endif %}
-  <p>{{ '%(count)d followers' | format(count=user.followers_count()) }}, {{ '%(count)d following' | format(count=user.following_count()) }}</p>
+  <p>{{ user.followers_count() }} followers, {{ user.following_count() }} following.</p>
   {% if user != current_user %}
     {% if not current_user.is_following(user) %}
       <p>
-        <form action="{{ url_for('views.follow', name=user.name) }}" method="post">
+        <form action="{{ url_for('views.follow', name=user.name) }}" method="POST">
           {{ form.hidden_tag() }}
           <input type="submit" value="Follow" class="btn btn-outline-primary btn-sm">
         </form>
