--- a/website/templates/views/profile.html
+++ b/website/templates/views/profile.html
@@ -100,13 +100,21 @@
                 {% for comment in comments %}
                         {% include '_comments.html'  %}
                 {% endfor %}
-        {% if prev_url %}
-            <a href="{{ prev_url }}" class="btn btn-secondary">Newer</a>
-        {% endif %}
-        {% if next_url %}
-            <a href="{{ next_url }}" class="btn btn-secondary">Older</a>
-        {% endif %}
-
+        <!--Pagination-->
+            <nav aria-label="Post navigation">
+                <ul class="pagination">
+                    <li class="page-item{% if not prev_url %} disabled{% endif %}">
+                        <a class="page-link" href="{{ prev_url }}">
+                        <span aria-hidden="true">&larr;</span>Newer
+                        </a>
+                    </li>
+                    <li class="page-item{% if not next_url %} disabled{% endif %}">
+                        <a class="page-link" href="{{ next_url }}">
+                        Older<span aria-hidden="true">&rarr;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-md-5 order-md-1">
             <!-- Content for the second column -->
