--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}Title{% endblock %}</title>
 </head>
 
-<body>
+<body class="fw-normal">
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
       <div class="col-md-3 mb-2 mb-md-0">
