--- a/website/templates/views/blog.html
+++ b/website/templates/views/blog.html
@@ -5,11 +5,11 @@
 {% block body_content %}
 <div class="container">
     {% if is_follow: %}
-        <h1 align="center" class="fw-normal">Welcome to your Blog Feed! </h1>
-        <p align="center" class="fw-normal">Here you can follow your friends' posts and share your thoughts.</p>
+        <h1 align="center">Welcome to your Blog Feed! </h1>
+        <p align="center">Here you can follow your friends' posts and share your thoughts.</p>
     {% else: %}
-        <h1 align="center" class="fw-normal">Explore the Blog</h1>
-        <p align="center" class="fw-normal">You can find new friends and topics to discuss.</p>
+        <h1 align="center">Explore the Blog</h1>
+        <p align="center">You can find new friends and topics to discuss.</p>
     {% endif %}
 </div>
 
