--- a/website/templates/views/profile.html
+++ b/website/templates/views/profile.html
@@ -45,11 +45,11 @@
     <div class="row featurette">
         <div class="col-md-7">
             <h2 class="featurette-heading fw-normal lh-1" id="mp">Profile</h2>
-            <p class="lead">Name: {{ user.name }}</p>
-            <p class="lead">Email: {{ user.email }}</p>
-            {% if user.about_me %}<p class="lead">{{ user.about_me }}</p>{% endif %}
-            {% if user.last_seen %}<p class="lead">Last seen on: {{ moment(user.last_seen).format('LLL') }}</p> {% endif %}
-            <p class="lead">{{ user.followers_count() }} followers, {{ user.following_count() }} following.</p>
+            <p>Name: {{ user.name }}</p>
+            <p>Email: {{ user.email }}</p>
+            {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
+            {% if user.last_seen %}<p>Last seen on: {{ moment(user.last_seen).format('LLL') }}</p> {% endif %}
+            <p>{{ user.followers_count() }} followers, {{ user.following_count() }} following.</p>
             {% if user == current_user %}
                 <p> <a href="{{ url_for('auth.edit_profile') }}" class="btn btn-primary"> Edit Your Profile</a> </p>
                 <p> <a href="{{ url_for('auth.change_password') }}" class="btn btn-outline-primary"> Change Your Password</a> </p>
